--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,6 +25,32 @@ li.active{
   background-position: center;
   background-size: cover;
 }
+.banner_box{
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  margin-top: 17rem;
+}
+.banner {
+  font-family: 'Arbutus Slab';
+  background-color: #d404af;
+  margin-top: 17rem;
+  width: 52rem;
+}
+.jumbotron h1{
+  font-size: 3.75rem;
+  color: white;
+  margin: 0px;
+}
+.jumbotron p{
+  font-size: 1.25rem;
+}
+.tag_line{
+font-family: 'Roboto';
+background-color: #f5cb07;
+width: 52rem;
+}
 .quote_box{
   margin-bottom: 9.25rem;
   display: flex;
@@ -98,4 +124,50 @@ li.active{
 footer{
   margin-top: 5rem;
   background-color: #e9ebeb;
+}
+.social_media{
+  margin-top: 2.625rem;
+  margin-bottom: 1.5rem;
+}
+.copyright{
+  margin-bottom: 2rem;
+  color: #212123;
+  font-size: .75rem;
+}
+@media only screen and (min-width: 992px){
+  .headshot p{
+    display: none;
+  }
+}
+@media only screen and (max-width: 991px){
+  .banner_box{
+    margin-top: 10rem;
+  }
+  .jumbotron h1{
+    font-size: 2.75rem;
+  }
+  .jumbotron p{
+    font-size: 1rem;
+  }
+  .jumbotron{
+    height: 33.5rem;
+    margin-bottom: 4rem;
+  }
+  .quote_box{
+    margin-bottom: 5.25rem;
+  }
+  .why h1{
+font-size: 2rem;
+}
+.headshot p{
+  color: white;
+}
+.headshot{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.captions{
+  display: none;
+}
 }
